welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:3: error: not found: type int
	var max:int = nums(0);
                ^